text align fix

--- a/themes/md/scss/imports/_portfolio-single.scss
+++ b/themes/md/scss/imports/_portfolio-single.scss
@@ -42,6 +42,7 @@
 
 	 	.portfolio-details-nav{
 	 		padding-top: $column-gutter;
+	 		text-align: center;
 	 		.btn.continue-reading{
 	 
 	 		}
